[tool.poetry]
name = "homework10-1"
version = "0.1.0"
description = ""
authors = ["mishchuk <mishchuksg@gmail.com>"]
readme = "README.md"
packages = [{include = "homework10"}]

[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.lint.dependencies]
mypy = "^1.13.0"
black = "^24.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
